--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,7 @@
           "*.md": "vscode.markdown.preview.editor"
         },
         "workbench.colorTheme": "Default Dark+",
-        "workbench.iconTheme": "vscode-icons",
+        "workbench.iconTheme": "icons",
         "github.copilot.enable": {
           "*": true,
           "python": false,
@@ -69,7 +69,7 @@
         "streetsidesoftware.code-spell-checker",
         "tal7aouy.icons",
         "saeris.markdown-github-alerts",
-        "yy0931.vscode-sqlite3-editor"  
+        "yy0931.vscode-sqlite3-editor"
       ]
     }
   },
